--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -1,5 +1,6 @@
-name: Laravel CI/CD - Management Pinetmart Subdomain
+name: Laravel CI/CD - Management Pinetmart Subdomain (Backup + Detailed)
 
+# Trigger workflow saat ada push ke branch main
 on:
   push:
     branches:
@@ -13,12 +14,13 @@ jobs:
     name: Laravel CI
     runs-on: ubuntu-latest
 
+    # Menjalankan MySQL sebagai service untuk testing local
     services:
       mysql:
         image: mysql:8
         env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: management
+          MYSQL_ROOT_PASSWORD: root      # Password root MySQL
+          MYSQL_DATABASE: management     # Database testing
         ports:
           - 3306:3306
         options: >-
@@ -28,79 +30,121 @@ jobs:
           --health-retries=5
 
     steps:
+      # 1. Checkout repo dari GitHub
       - name: Checkout Repo
         uses: actions/checkout@v4
 
+      # 2. Setup PHP versi 8.2 + ekstensi yang dibutuhkan Laravel
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
           extensions: mbstring, bcmath, pdo_mysql, intl
 
+      # 3. Install composer dependencies untuk CI
       - name: Install Composer Dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
+      # 4. Copy file environment khusus CI (opsional)
       - name: Copy CI Environment
-        run: cp .env.ci .env
+        run: cp .env.ci .env || echo "CI env file not found, skipping"
 
+      # 5. Generate APP_KEY Laravel
       - name: Generate App Key
         run: php artisan key:generate --ansi
 
-      # Lewatkan migrate & test dulu
+      # 6. Skip migrate & test di CI (akan dilakukan manual/deploy)
       - name: Skip Migrations & Tests
         run: echo "Migrations & tests dilewati, env manual nanti"
 
   # =============================
-  # 2️⃣ Continuous Deployment (CD)
+  # 2️⃣ Continuous Deployment (CD) dengan backup
   # =============================
   cd:
-    name: Deploy Laravel to Hostinger
+    name: Deploy Laravel to Hostinger with Backup
     runs-on: ubuntu-latest
-    needs: ci
+    needs: ci  # Menunggu job CI selesai
 
     steps:
-      - name: Deploy to Hostinger via SSH
+      # 1. Deploy via SSH
+      - name: Deploy via SSH (HTTPS clone + backup)
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.HOSTINGER_HOST }}
-          username: ${{ secrets.HOSTINGER_USER }}
-          key: ${{ secrets.HOSTINGER_SSH_KEY }}
-          port: ${{ secrets.HOSTINGER_PORT }}
+          host: ${{ secrets.HOSTINGER_HOST }}      # IP / hostname server
+          username: ${{ secrets.HOSTINGER_USER }}  # User SSH
+          key: ${{ secrets.HOSTINGER_SSH_KEY }}    # Private key SSH
+          port: ${{ secrets.HOSTINGER_PORT }}      # Port SSH
           script: |
-            set -e
-            echo "🚀 Mulai deployment Laravel 11..."
+            set -e  # Stop jika ada error
 
-            # Pastikan folder project ada
-            mkdir -p ~/public_html/management_apk
-            cd ~/public_html/management_apk
+            echo "🚀 Mulai deployment Laravel 11 dengan backup..."
 
-            # Clone / update repo
-            if [ ! -d ".git" ]; then
-              git clone https://github.com/indopinetmart/management_apk.git .
+            # -------------------------------
+            # 2. Definisi folder target & backup
+            # -------------------------------
+            TARGET=~/domains/management-pinetmart.srf-group.com/public_html
+            BACKUP_FOLDER=~/domains/management-pinetmart.srf-group.com/backup_$(date +%Y%m%d_%H%M%S)
+
+            # -------------------------------
+            # 3. Backup folder Laravel lama
+            # -------------------------------
+            if [ -d "$TARGET" ] && [ "$(ls -A $TARGET)" ]; then
+              echo "💾 Backup folder lama ke $BACKUP_FOLDER"
+              mkdir -p $BACKUP_FOLDER
+              cp -r $TARGET/* $BACKUP_FOLDER/
             else
+              echo "Folder lama kosong, tidak perlu backup"
+            fi
+
+            # -------------------------------
+            # 4. Pastikan folder target ada
+            # -------------------------------
+            mkdir -p $TARGET
+            cd $TARGET
+
+            # -------------------------------
+            # 5. Clone atau update repo Laravel via HTTPS + GitHub PAT
+            # -------------------------------
+            if [ ! -d ".git" ]; then
+              echo "📥 Clone repo Laravel baru"
+              git clone https://${GITHUB_PAT}@github.com/indopinetmart/management_apk.git .
+            else
+              echo "🔄 Update repo Laravel"
               git fetch origin main
               git reset --hard origin/main
             fi
 
-            # Install composer
+            # -------------------------------
+            # 6. Copy .env jika belum ada
+            # -------------------------------
+            if [ ! -f ".env" ]; then
+              if [ -f ".env.example" ]; then
+                cp .env.example .env
+                echo ".env dibuat dari .env.example"
+              else
+                echo "⚠️ .env tidak ditemukan, harap buat manual"
+              fi
+            fi
+
+            # -------------------------------
+            # 7. Install composer dependencies
+            # -------------------------------
+            echo "🔧 Install composer dependencies"
             composer install --no-interaction --prefer-dist --optimize-autoloader || composer install
 
-            # Cache config, route, view
+            # -------------------------------
+            # 8. Jalankan migrate otomatis
+            # -------------------------------
+            echo "🗄️ Jalankan migrate otomatis"
+            php artisan migrate --force
+
+            # -------------------------------
+            # 9. Cache Laravel (config, route, view)
+            # -------------------------------
+            echo "⚡ Cache config, route, view"
             php artisan config:cache
             php artisan route:cache
             php artisan view:cache
 
-            # Update index.php Laravel 11
-            echo "<?php
-            use Illuminate\Http\Request;
-            define('LARAVEL_START', microtime(true));
-
-            if (file_exists(\$maintenance = __DIR__.'/storage/framework/maintenance.php')) {
-                require \$maintenance;
-            }
-
-            require __DIR__.'/vendor/autoload.php';
-
-            (require_once __DIR__.'/bootstrap/app.php')
-                ->handleRequest(Request::capture());
-            " > ~/public_html/management_apk/index.php
+            echo "✅ Deployment selesai!"
+            echo "💾 Backup lama disimpan di $BACKUP_FOLDER"
